first touch...tbc

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,29 @@
 * {
     padding: 0;
     margin: 0;
-    
+    box-sizing: border-box;
+}
+
+.right__section {
+    border: 3px solid black;
+    margin: 48px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column wrap;
+}
+
+
+.result__line {
+    display: flex;
+    border: 3px solid red;
+    padding: 24px;
+}
+
+.result__para {
+    margin-right: 16px;
+}
+
+.result__score--highlight {
+    font-weight: 800;
 }
