--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
     text-align: center;
 }
 
-.score-left {
+.score__left {
     padding: 58px;
     width: 74px;
     height: 74px;
@@ -47,14 +47,14 @@ body {
     margin: 0 auto;
 }
 
-.big-score {
+.big__score {
     color: #fff;
     font-weight: bold;
     font-size: 60px;
 
 }
 
-.score-con {
+.score__con {
     display: flex;
 }
 
@@ -66,7 +66,7 @@ body {
     border-radius: 10px;
 }
 
-.score-reaction {
+.score__reaction {
     background-color: hsla(0, 100%, 67%, 0.1);
     color: hsl(0, 100%, 67%);
 }
@@ -75,26 +75,26 @@ body {
     color: rgba(87,87,87, 0.992);
 }
 
-.score-con img {
+.score__con img {
     margin-right: 5px;
 }
 
-.black-text {
+.black__text {
     color: #222;
     font-weight: bold;
 }
 
-.score-memory {
+.score__memory {
     background-color: hsla(39, 100%, 56%, 0.1);
     color: hsl(39, 100%, 56%);
 }
 
-.score-verbal {
+.score__verbal {
     background-color: (166, 100%, 37%, 0.1);
     color: hsl(166, 100%, 37%);
 }
 
-.score-visual {
+.score__visual {
     background-color: hsla(234, 85%, 45%, 0.1);
     color: hsl(234, 85%, 45%);
 }
@@ -125,7 +125,7 @@ button {
         margin: 0 auto;
     }
 
-    .left-text {
+    .left__text {
         padding: 20px;
         text-align: center;
     }
