--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    font-family: 'Hanken-Grotesk';
+    font-family: 'Hanken Grotesk';
 }
 
 .container {
