--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
- @import url('https://fonts.google.com/specimen/Hanken+Grotesk');
+@import url('https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&display=swap');
 
 body {
     display: flex;
